# llmviz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  gallery.yml  release.yml
docs/superpowers/specs/: 2026-07-04-raschka-style-renderer-design.md
examples/: models.yaml
src/llmviz/: cli.py  explain.py  fetch.py  fit.py  gallery.py  gguf.py  mcp_server.py  spec.py
src/llmviz/render/: block.py  card.py  diff.py  factsheet.py  lineage.py  poster.py  svg.py  tokens.py  widths.py
tests/: test_render.py  test_spec.py
tests/fixtures/: gemma3_4b.json  granite4.json  kimi_linear.json
